updated css and html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="card card-forecast bg-transparent shadow">
           <img src="#" alt="Weather Icon" width="48px" class="icon-url"/>
           <div class="card-body">
-            <h5 class="card-title text-center" id="forecast-day"></h5>
+            <h5 class="card-text text-center" id="forecast-day"></h5>
             <p class="card-text text-center" id='min-temp'></p>
             <p class="card-text text-center" id='max-temp'></p>
             <p class="card-text text-center" id='wind-info'></p>
